# Rustic_Denk

./: .gitignore  Cargo.toml  README.md  bricked.dnk  bricked.txt  keys.dnk  keys.txt
.VSCodeCounter/2023-03-20_23-20-15/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
output_encrypt/: jojo.dnk  test.dnk
src/: APi.rs  direct_retrieval.rs  lib.rs  main.rs  process_config.rs
src/actions/: mod.rs  read.rs  write.rs
src/cli/: display.rs  inquire.rs  mod.rs
src/processes/: decrypt.rs  encrypt.rs  filecrypt.rs  justify_keys.rs  mod.rs  reliability.rs  softcrypt.rs
src/processes/decrypt_source/: mod.rs  soft_decrypt.rs
src/processes/encrypt_source/: mod.rs  soft_encrypt.rs
src/protocols/: decrypt.rs  encrypt.rs  mod.rs  retrieve_data.rs  single_view.rs
src/protocols/process_decrypt/: debuffer.rs  mod.rs  recentralize.rs  unbind.rs  vanilla.rs
src/protocols/process_encrypt/: binding.rs  decentralization.rs  key_buffering.rs  key_encryption.rs  mod.rs
src/protocols/tooling/: key_generation.rs  mod.rs
src/user_interaction/: display.rs  mod.rs  requests.rs
src/utility/: generate.rs  mod.rs  perform.rs
