[package]
name = "rustic_denk_algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.5.3"
anyhow = "1.0.69"
rand = "0.8.5"
num-bigint = "0.4.3"
tokio = { version = "1.26.0", features = ["full"] }
